--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><p>olá tudo bem???</h1>
+<head><h1>olá</h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
 </head>
 <body>
-    
+    <p>tudo bem???</p>
 </body>
 </html>
