--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>vortex</title>
 </head>
 <body>
-    <p>Olá, tudo bem???</p>
+    <p>Olá, tudo bem??? Aqui falaremos sobre vortex</p>
 </body>
 </html>
-<img src="./vortex (1).png" alt="">
+<img src="" alt="vortex azul">
