--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
     <p>Olá, tudo bem??? Aqui falaremos sobre vortex</p>
 </body>
 </html>
-<img src="" alt="vortex azul">
+<img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="vortex azul">
