--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>vortex</title>
 </head>
 <body>
-    <p>Olá, tudo bem??? Aqui falaremos sobre vortex</p>
-</body>
-</html>
 <img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="vortex azul">
+<p>Olá, tudo bem??? Aqui falaremos sobre vortex</p.>
+</body>
+  
+</html>
