--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>vortex</title>
 </head>
 <body>
+    <header>
+    </header>
+    <section>
+        <div>
+            <h2> conheca nosso site </h2>
+            <p> O vortex é uma distorção no espaço tempo </p>
+        </div>
+    </section>
 <img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="vortex azul">
-<p>Olá, tudo bem??? Aqui falaremos sobre vortex</p.>
 </body>
   
 </html>
