--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><h1>VORTEX</h1>
+<head><h1>M</h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
 </head>
 <body>
-    <header>
-    </header>
-    <section>
-        <div>
+    <header id="lindos">
+        <!--h1 para o titulo de maior nivel e h6 para o menor nivel -->
+        
             <h2> conheca nosso site </h2>
             <p> O vortex é uma distorção no espaço tempo </p>
-        </div>
-    </section>
-<img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="vortex azul">
+        </h1>
+    </header>
+    <section class="intro"
+    >
+        <div>
+            <img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="" srcset="">
+            <h2>
+                conheça nazario
+            </h2>
+   
+
 </body>
   
 </html>
