--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><h1>M</h1>
+<head><h1>LINDOS</h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
@@ -9,7 +9,7 @@
     <header id="lindos">
         <!--h1 para o titulo de maior nivel e h6 para o menor nivel -->
         
-            <h2> conheca nosso site </h2>
+            <h2> conheca nazario </h2>
             <p> O vortex é uma distorção no espaço tempo </p>
         </h1>
     </header>
@@ -17,9 +17,7 @@
     >
         <div>
             <img src="./png-clipart-whirlpool-whirlpool-s-blue-computer-wallpaper.png" alt="" srcset="">
-            <h2>
-                conheça nazario
-            </h2>
+        
    
 
 </body>
