--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--h1 para o titulo de maior nivel e h6 para o menor nivel -->
         
             <h2> conheca nazario </h2>
-            <p> O vortex é uma distorção no espaço tempo </p>
+            <p> nazario foi traida e hoje sai sofrendo por amor </p>
         </h1>
     </header>
     <section class="intro"
