--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
 </head>
+<div>
+    <h2> nazario-476, foi encontrada em 07/09/2007 </h2>
+</div>
 <body>
-    <header id="buraco negro, é uma distorção no espaço tempo.">
-        <!--h1 para o titulo de maior nivel e h6 para o menor nivel -->
-        
+    <header>
             <h2> conheca nazario-476 </h2>
-            <p> nazario foi traida e hoje sai sofrendo por amor </p>
+            <p> nazario foi traida e sai comendo tudo q ve hj </p>
         </h1>
     </header>
     <section class="intro"
