--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </div>
 <body>
     <header>
-            <h2> conheca nazario-476 </h2>
-            <p> nazario foi traida e sai comendo tudo q ve hj </p>
+            <h2> ela tem um tamanho 32x maior que o Sol </h2>
+            <p> 1hhggjhgh </p>
         </h1>
     </header>
     <section class="intro"
