--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>vortex</title>
 </head>
 <div>
-    <h2> nazario-476, foi encontrada em 07/09/2007 </h2>
+    <h2> pirulim-476, foi encontrada em 07/09/2007 </h2>
 </div>
 <body>
     <header>
-            <h2> ela tem um tamanho 32x maior que o Sol </h2>
+            <h2> ele tem um tamanho 32x maior que o Sol </h2>
             <p> 1hhggjhgh </p>
         </h1>
     </header>
