--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
-</head>
+</head> nnkjjkjjnjnknknn                   
 <div>
     <h2> oruam-476, foi encontrada em 07/09/2007 </h2>
 </div>
 <body>
     <header>
             <h2> ele tem um tamanho 32x maior que o Sol </h2>
-            <p> 1hhggjhgh </p>
+            <p> RELATIVIDADE </p>
         </h1>
     </header>
     <section class="intro"
