--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
-</head> nnkjjkjjnjnknknn                   
+</head> O efeito da RELATIVIDADE                  
 <div>
     <h2> oruam-476, foi encontrada em 07/09/2007 </h2>
 </div>
 <body>
     <header>
             <h2> ele tem um tamanho 32x maior que o Sol </h2>
-            <p> RELATIVIDADE </p>
+            <p> RELATIVIDADE; "A teoria da relatividade é a terminologia dada à teoria da relatividade restrita e à teoria da relatividade geral.
+                Funciona para quaisquer problemas relacionados a corpos que se movimentam em velocidades próximas à da luz.
+                Seus postulados são o princípio da relatividade restrita e o princípio de constância da velocidade da luz.
+                Com base na teoria da relatividade restrita foi possível concluir que a velocidade da luz é a velocidade máxima no vácuo; a ausência do éter; o princípio da simultaneidade; a dilatação do tempo; e a contração do comprimento."
+                </p>
         </h1>
     </header>
     <section class="intro"
