--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><h1>Buraco Negro</h1>
+<head><h1>estadios de futebol/h1>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vortex</title>
@@ -23,7 +23,7 @@
     <section class="intro"
     >
         <div>
-            <img src="./nazario.webp" alt="">
+            <img
         </div>
         
         
