--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><h1>estadios de futebol/h1>
+<head><h1>estadios de futebol
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>futebol</title>
@@ -10,11 +10,8 @@
 </div>
 <body>
     <header>
-            <h2> ele tem um tamanho 32x maior que o Sol </h2>
-            <p> RELATIVIDADE; "A teoria da relatividade é a terminologia dada à teoria da relatividade restrita e à teoria da relatividade geral.
-                Funciona para quaisquer problemas relacionados a corpos que se movimentam em velocidades próximas à da luz.
-                Seus postulados são o princípio da relatividade restrita e o princípio de constância da velocidade da luz.
-                Com base na teoria da relatividade restrita foi possível concluir que a velocidade da luz é a velocidade máxima no vácuo; a ausência do éter; o princípio da simultaneidade; a dilatação do tempo; e a contração do comprimento."
+            <h2>  </h2>
+            <p> 
 
                 
             </p>
