--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><h1>estadios de futebol
+
+<head>
+    <h1>estadios de futebol
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>futebol</title>
     <link rel="stylesheet" href="style.css"
-</head>                   
-<div>
-    <h2> os melhores estadios do sul do brasil </h2>
+    </head>  
+<body>
+     <header id="estadios">
+        <!--h1 para titulo de maior nivel e h6 para o menor nivel-->
+    <h1> os melhores estadios do sul do brasil </h1>
+    <a href="#estadios">
 </div>
 <body>
     <header>
