--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>futebol</title>
     <link rel="stylesheet" href="style.css"
-    </head>  
+ <head></head> 
+
 <body>
      <header id="estadios">
         <!--h1 para titulo de maior nivel e h6 para o menor nivel-->
@@ -25,6 +26,8 @@
      <a href="equipe"
          <h2>equipe</h2>
     </a>
-    <img src=""
+    <img src="estadio1>weebp"
      </header>
-     
+
+     h2
+
