--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <a href="equipe"
          <h2>equipe</h2>
     </a>
-    <img src="estadio1>weebp"
+    <img src="estadio1.webp"
      </header>
 
      h2
