--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>futebol</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
  <head></head> 
 
 <body>
@@ -23,11 +23,11 @@
 
 
 
-     <a href="equipe"
+     <a href="equipe">
          <h2>equipe</h2>
     </a>
-    <img src="estadio1.webp"
+    <img src="estadio1.webp">
      </header>
 
-     h2
+     
 
