--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     </a>
     <img src="estadio1.webp">
      </header>
+     <section class="intro">
+      <div>
+         <h2>Introduçao</h2>
+         <p> Nesse site, falaremos sobre os melhores estadios de futebol do sul do Brasil, onde contaremos resuidamente a historia de cada um deles
+            <h2> vamos conhecer os estadios </h2>
+         </p>
 
      
 
