--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="pt-br">
 
 <head>
-    <h1>estadios de futebol
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>futebol</title>
-    <link rel="stylesheet" href="style.css">
- <head></head> 
+
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>futebol</title>
+      <link rel="stylesheet" href="style.css">
+
+</head>
 
 <body>
-     <header id="estadios">
-        <!--h1 para titulo de maior nivel e h6 para o menor nivel-->
-    <h1> os melhores estadios do sul do brasil </h1>
-    <a href="#estadios">
-     
-     <h2>estadios</h2>
-     </a>
-     <a href="historias">
-        <h2>historias</h2>
-     </a>
+   <header id="estadios">
+      <!--h1 para titulo de maior nivel e h6 para o menor nivel-->
+      <h1> os melhores estadios do sul do brasil </h1>
+      <a href="#estadios">
+
+         <h2>estadios</h2>
+      </a>
+      <a href="historias">
+         <h2>historias</h2>
+      </a>
 
 
 
-     <a href="equipe">
+      <a href="equipe">
          <h2>equipe</h2>
-    </a>
-    <img src="estadio1.webp">
-     </header>
-     <section class="intro">
+      </a>
+   </header>
+   <section class="intro">
       <div>
+         <img src="estadio1.webp">
          <h2>Introduçao</h2>
-         <p> Nesse site, falaremos sobre os melhores estadios de futebol do sul do Brasil, onde contaremos resuidamente a historia de cada um deles
+         <p> Nesse site, falaremos sobre os melhores estadios de futebol do sul do Brasil, onde contaremos resuidamente
+            a historia de cada um deles
             <h2> vamos conhecer os estadios </h2>
          </p>
-
-     
-
+   
