--- a/index.html
+++ b/index.html
@@ -30,4 +30,20 @@
          <p> Nesse site, falaremos sobre os melhores estadios de futebol do sul do Brasil, onde contaremos resuidamente
             a historia de cada um deles
          <h2> vamos conhecer os estadios </h2>
-         </p>
+         <h2>Campos</h2>
+
+         <div>
+
+   </section>
+   <section class="Campos">
+      <img src="coxa doido.jpg" alt="foto do estadio Major Couto Perreira">
+      <div>
+      <p>O Estadio Couto Perreira, localizado em Curitiba, Paraná, é a casa do Coritiba Foot Ball Club.Inaugurado em 1932, tem capacidade para 40 mil pessoas e é um dos estadios mais tradicionais do Brasil.
+         Sua atmosfera vibrante é historia rica o tornam um local iconico para torcedores de futebol</p>
+      </div>
+      <img src="porcos.jpg" alt="foto do estadio Joaquim Americo">
+      <div>
+         <p> Arena da Baixada, situada em Curitiba,Parana, é o estadio do club do Athletico Paranaense. Inaugurado em 1914 e modernizada para Copa do Mundo de 2014, possui capacidade para mais 42 mil pessoas. 
+            Reconhecida por sua arquietura inovadora e atmosfera eltrizante, Arena da baixada é um marco no cenario esportivo brasileiro  </p>
+      </div>
+   </section>
