--- a/index.html
+++ b/index.html
@@ -47,3 +47,5 @@
             Reconhecida por sua arquietura inovadora e atmosfera eltrizante, Arena da baixada é um marco no cenario esportivo brasileiro  </p>
       </div>
    </section>
+</body>
+</html>
