--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
          <p> Arena da Baixada, situada em Curitiba,Parana, é o estadio do club do Athletico Paranaense. Inaugurado em 1914 e modernizada para Copa do Mundo de 2014, possui capacidade para mais 42 mil pessoas. 
             Reconhecida por sua arquietura inovadora e atmosfera eltrizante, Arena da baixada é um marco no cenario esportivo brasileiro  </p>
       </div>
+      <img src="alagadinho.jpg" alt=" foto estadio do beira-rio">
+      <div>
+         <p> O estadio Beira-Rio, localizado em Porto Alegre,Rio Grande do Sul, e o lar do Sport Club Internacional. INaugurado em 1969 e recentemente renovado para copa do mundo de 2014, possui capacida de 50 mil pessoas.
+            reconhecido por sua localização as margens do rio Guaiba e sua atmosfera apaixonada, o Beira-Rio e um dos estadios mais emblematicos do futebol brasileiro. </p>
+      </div>
    </section>
 </body>
 </html>
