--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
             reconhecido por sua localização as margens do rio Guaiba e sua atmosfera apaixonada, o Beira-Rio e um dos estadios mais emblematicos do futebol brasileiro. </p>
       </div>
    </section>
+   <h2>equipe</h2>
+   <section id="equipe">
+      <div>
+         <img src="anna linda.jpg" alt=" partipante Anna">
+         <h3>Anna Vitoria Nazario</h3>
+      </div>
+      <img src="filho lindo.jpg" alt="paricipante Joao ">
+      <h3>João Vitor da Silva Filho</h3>
 </body>
 </html>
