--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
          <h3>Anna Vitoria Nazario</h3>
       </div>
       <img src="filho lindo.jpg" alt="paricipante Joao ">
-      <h3>João Vitor da Silva Filho</h3>
+      <div>
+         <h3>João Vitor da Silva Filho</h3>
+      </div>
 </body>
 </html>
