--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
    <h2>equipe</h2>
    <section id="equipe">
       <div>
+         width: 30%;
          <img src="anna linda.jpg" alt=" partipante Anna">
          <h3>Anna Vitoria Nazario</h3>
       </div>
