--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <p> Arena da Baixada, situada em Curitiba,Parana, é o estadio do club do Athletico Paranaense. Inaugurado em 1914 e modernizada para Copa do Mundo de 2014, possui capacidade para mais 42 mil pessoas. 
             Reconhecida por sua arquietura inovadora e atmosfera eltrizante, Arena da baixada é um marco no cenario esportivo brasileiro  </p>
       </div>
-      <img src="alagadinho.jpg" alt=" foto estadio do beira-rio">
+      <img class="coxa" src="alagadinho.jpg" alt=" foto estadio do beira-rio">
       <div>
          <p> O estadio Beira-Rio, localizado em Porto Alegre,Rio Grande do Sul, e o lar do Sport Club Internacional. INaugurado em 1969 e recentemente renovado para copa do mundo de 2014, possui capacida de 50 mil pessoas.
             reconhecido por sua localização as margens do rio Guaiba e sua atmosfera apaixonada, o Beira-Rio e um dos estadios mais emblematicos do futebol brasileiro. </p>
@@ -55,12 +55,11 @@
    <h2>equipe</h2>
    <section id="equipe">
       <div>
-         width: 30%;
-         <img src="anna linda.jpg" alt=" partipante Anna">
+         <img class="dupla" src="anna linda.jpg" alt=" partipante Anna">
          <h3>Anna Vitoria Nazario</h3>
       </div>
-      <img src="filho lindo.jpg" alt="paricipante Joao ">
       <div>
+      <img class="dupla" src="filho lindo.jpg" alt="paricipante Joao ">
          <h3>João Vitor da Silva Filho</h3>
       </div>
 </body>
